--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Blocklists for Discord",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --fix",
+    "dev": "nodemon --require dotenv/config --exec babel-node --extensions '.ts' src/index.ts",
+    "build:clean": "rm -rf dist/ && mkdir dist",
+    "build:bot": "babel src --out-dir dist/ --extensions '.ts'",
+    "build": "npm run build:clean && npm run build:bot",
+    "serve": "NODE_ENV=production node dist/"
   },
   "repository": {
     "type": "git",
@@ -21,15 +27,18 @@
     "@typeit/discord": "^4.0.8",
     "dd-trace": "^0.30.2",
     "discord.js": "^12.3.1",
-    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "express-graphql": "^0.12.0",
+    "express-rate-limit": "^5.2.3",
+    "express-trailing-slash": "^1.0.0",
     "fs": "0.0.1-security",
     "fs-extra-promise": "^1.0.1",
     "graphql": "^15.4.0",
     "hot-shots": "^8.2.0",
+    "ini": "^2.0.0",
     "json-query": "^2.2.2",
     "moment": "^2.29.1",
-    "mongoose": "^5.11.10",
+    "mongoose": "^5.10.3",
     "reflect-metadata": "^0.1.13",
     "toml": "^3.0.0",
     "tslib": "^2.0.3",
@@ -50,6 +59,8 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@babel/register": "^7.12.1",
+    "@types/express": "^4.17.11",
+    "@types/express-rate-limit": "^5.1.1",
     "@types/node": "^14.14.2",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
@@ -57,6 +68,7 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-static-fs": "^3.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "dotenv": "^8.2.0",
     "eslint": "^7.11.0",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
