--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,13 @@ jobs:
       image: ubuntu-2004:202010-01
     steps:
       - checkout
-      - run: |
-          echo "deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/testing/xUbuntu_${VERSION_ID}/ /" | sudo tee /etc/apt/sources.list.d/devel:kubic:libcontainers:testing.list
-          curl -L https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/testing/xUbuntu_${VERSION_ID}/Release.key | sudo apt-key add -
+      - run:
+          name: install podman
+          command: |
+            echo "deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_20.04/ /" | sudo tee /etc/apt/sources.list.d/devel:kubic:libcontainers:testing.list
+            curl -L https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_20.04/Release.key| sudo apt-key add -
+            sudo apt-get update
+            sudo apt-get install podman
       - run: sudo apt-get update
       - run: sudo apt-get install podman
       - run:
