update circleci push step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           name: push to GCR
           command: |
             echo "${GCR_AUTH}" > "${HOME}/gcr-key.json"
-            cat "${HOME}/gcr-key.json" | docker login -u _json_key --password-stdin https://gcr.io
+            cat "${HOME}/gcr-key.json" | podman login -u _json_key --password-stdin https://gcr.io
             podman tag "${IMAGE_NAME}:latest" "${GCR_IMAGE_NAME}:latest"
             podman push "${GCR_IMAGE_NAME}:latest"
 workflows:
