--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,13 +15,12 @@ jobs:
       - run:
           name: build container image
           command: |
-            sudo podman build -t "${IMAGE_NAME}:latest" .
+            sudo podman build -t "${GCR_IMAGE_NAME}:latest" .
       - run:
           name: push to GCR
           command: |
             echo "${GCR_AUTH}" > "${HOME}/gcr-key.json"
             cat "${HOME}/gcr-key.json" | podman login -u _json_key --password-stdin https://gcr.io
-            podman tag "localhost/${IMAGE_NAME}:latest" "${GCR_IMAGE_NAME}:latest"
             podman push "${GCR_IMAGE_NAME}:latest"
 workflows:
   version: 2
