--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
           command: |
             echo "${GCR_AUTH}" > "${HOME}/gcr-key.json"
             cat "${HOME}/gcr-key.json" | podman login -u _json_key --password-stdin https://gcr.io
-            podman image push "${GCR_IMAGE_NAME}:latest"
+            podman image push "${GCR_IMAGE_NAME}" "https://$GCR_IMAGE_NAME"
 workflows:
   version: 2
   build:
