--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,13 +15,13 @@ jobs:
       - run:
           name: build container image
           command: |
-            sudo podman build -t "${IMAGE_NAME}" .
+            sudo podman build -t botmin:latest .
       - run:
           name: push to GCR
           command: |
             echo "${GCR_AUTH}" > "${HOME}/gcr-key.json"
             cat "${HOME}/gcr-key.json" | podman login -u _json_key --password-stdin https://gcr.io
-            podman image push "${IMAGE_NAME}" "https://${GCR_IMAGE_NAME}"
+            podman image push botmin gcr.io/shitty-discord-bots/botmin
 workflows:
   version: 2
   build:
