--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
           command: |
             echo "${GCR_AUTH}" > "${HOME}/gcr-key.json"
             cat "${HOME}/gcr-key.json" | podman login -u _json_key --password-stdin https://gcr.io
-            podman image push botmin gcr.io/shitty-discord-bots/botmin
+            podman image push botmin:latest gcr.io/shitty-discord-bots/botmin:latest
 workflows:
   version: 2
   build:
