--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,14 @@ jobs:
             sudo apt-get install podman buildah
       - run:
           name: build container image
-          command: podman build -t botmin:latest .
+          command: |
+            podman build -t "${IMAGE_NAME}:latest" .
       - run:
           name: push to GCR
           command: |
             echo "${GCR_AUTH}" > "${HOME}/gcr-key.json"
             cat "${HOME}/gcr-key.json" | podman login -u _json_key --password-stdin https://gcr.io
-            podman image push botmin:latest gcr.io/shitty-discord-bots/botmin:latest
+            podman image push "${IMAGE_NAME}:latest" "${GCR_IMAGE_NAME}:latest"
 workflows:
   version: 2
   build:
