Squashed commit of the following:
commit 9a671389469084c1aca9f0cb66487645892067bb
Author: Samantha Emily-Rachel Belnavis <samanthabelnavis@gmail.com>
Date:   Fri Jan 22 04:58:58 2021 -0500

    ci workflow changes [ci skip]

commit a0b94946a2a7904839fe8183eaec996e89cd0a35
Author: Samantha Emily-Rachel Belnavis <samanthabelnavis@gmail.com>
Date:   Fri Jan 22 04:52:07 2021 -0500

    ci workflow changes

commit a80ab7313b7895d889c8036665d3a75b88060bb8
Author: Samantha Emily-Rachel Belnavis <samanthabelnavis@gmail.com>
Date:   Fri Jan 22 04:50:55 2021 -0500

    ci workflow changes

commit d0b24a177f2c8c29218f70f3c5f32c20d9cc168f
Author: Samantha Emily-Rachel Belnavis <samanthabelnavis@gmail.com>
Date:   Fri Jan 22 04:40:36 2021 -0500

    ci workflow changes

commit f2182b6c7048f8c7d269d34a3f3552309b60a138
Author: Samantha Emily-Rachel Belnavis <samanthabelnavis@gmail.com>
Date:   Fri Jan 22 04:33:49 2021 -0500

    ci workflow changes

commit 14a484e21e978fe020b347c85c1c8294d89e90f0
Author: Samantha Emily-Rachel Belnavis <samanthabelnavis@gmail.com>
Date:   Fri Jan 22 04:22:06 2021 -0500

    ci workflow changes

commit 8f0b8974ef1bb0ed32d37179d85776317b76e4c9
Author: Samantha Emily-Rachel Belnavis <samanthabelnavis@gmail.com>
Date:   Fri Jan 22 04:16:16 2021 -0500

    ci workflow changes

commit 4f7c9de5a1e169063a6bcb6c87002f8db10cd2d6
Author: Samantha Emily-Rachel Belnavis <samanthabelnavis@gmail.com>
Date:   Fri Jan 22 04:13:46 2021 -0500

    ci workflow changes

commit a2c463d60ee521c91a5720ea062750e223e838ea
Author: Samantha Emily-Rachel Belnavis <samanthabelnavis@gmail.com>
Date:   Fri Jan 22 04:10:45 2021 -0500

    ci workflow changes

commit 43f184187118c4f6957007fb5ccc87029d636543
Author: Samantha Emily-Rachel Belnavis <samanthabelnavis@gmail.com>
Date:   Fri Jan 22 03:48:26 2021 -0500

    ci workflow changes

commit a21d73a701638249dec53f0caf30dd8d5845a6de
Author: Samantha Emily-Rachel Belnavis <samanthabelnavis@gmail.com>
Date:   Fri Jan 22 03:20:44 20

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,63 @@
 version: 2.1
-jobs:
-  build:
+executors:
+  project:
+    docker:
+      - image: cimg/node:14.15
+    working_directory: ~/app
+  container:
     machine:
       image: ubuntu-2004:202010-01
+      docker_layer_caching: true
+    working_directory: ~/app
+jobs:
+  build_project:
+    executor: project
     steps:
       - checkout
       - run:
-          name: install podman
+          name: Build Project
+          command: |
+            npm ci
+            npm run build
+            npm prune --production
+      - persist_to_workspace:
+          root: /home/circleci/app
+          paths:
+            - node_modules
+            - dist
+            - Dockerfile
+  build_push_latest_image:
+    executor: container
+    steps:
+      - attach_workspace:
+          at: ~/app
+      - run:
+          name: Install Podman
           command: |
             echo "deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_20.04/ /" | sudo tee /etc/apt/sources.list.d/devel:kubic:libcontainers:testing.list
             curl -L https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_20.04/Release.key| sudo apt-key add -
             sudo apt-get update
-            sudo apt-get install podman buildah
+            sudo apt-get install podman
+            sudo chmod 4755 /usr/bin/newgidmap
+            sudo chmod 4755 /usr/bin/newuidmap
       - run:
-          name: build container image
+          name: Build Container Image
           command: |
             podman build -t "${IMAGE_NAME}:latest" .
       - run:
-          name: push to GCR
+          name: Push to GCR
           command: |
             echo "${GCR_AUTH}" > "${HOME}/gcr-key.json"
             cat "${HOME}/gcr-key.json" | podman login -u _json_key --password-stdin https://gcr.io
-            podman image push "${IMAGE_NAME}:latest" "${GCR_IMAGE_NAME}:latest"
+            podman image push botmin:latest gcr.io/shitty-discord-bots/botmin:latest
+
 workflows:
   version: 2
-  build:
+  build_latest:
     jobs:
-      - build:
+      - build_project:
           context: docker
+      - build_push_latest_image:
+          context: docker
+          requires:
+            - build_project
